# video-pipeline

./: .env.example  .gitignore  CHANGELOG.md  DATABASE.md  EXECUTION_GUIDE.md  LICENSE  Makefile  README.md  REFACTORING_SUMMARY.md
backend/: .gitignore  LOGGING.md  LOGGING_SUMMARY.md  STATE_RECOVERY.md  alembic.ini  chmod_scripts.sh  pyproject.toml  requirements.txt  start_all_celery_workers.sh  start_all_services.sh  start_celery.py  start_celery_worker_compliance.sh  start_celery_worker_pipeline.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_project_settings.py  003_add_stage_progress.py  004_add_continuity_tables.py
backend/app/: celery_app.py  config.py  constants.py  database.py  dependencies.py  exceptions.py  logging_config.py  main.py
backend/app/models/: __init__.py  candidate.py  continuity.py  node.py  project.py  stage.py  supplier.py  version.py
backend/app/nodes/: health.py  heartbeat.py  manager.py
backend/app/pipeline/: engine.py  gate.py  json_schemas.py  prompts.py
backend/app/routers/: __init__.py  compliance.py  constants.py  continuity.py  files.py  nodes.py  pacing.py  projects.py  stages.py  suppliers.py  system.py
backend/app/schemas/: __init__.py  candidate.py  common.py  continuity.py  enums.py  node.py  project.py  project_setting.py  review.py  rollback.py  stage.py  supplier.py  system.py  version.py
backend/app/services/: __init__.py  compliance_service.py  continuity_service.py  file_service.py  generation_service.py  pacing_service.py  (+5 more)
backend/config/: image_z_image_turbo.json
docs/: 操作手册.md  (+12 more)
(+140 files in other folders)
